--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,7 @@
 ---
-import '../styles/global.css';
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
+import "../styles/global.css";
 const pageTitle = "Home Page";
 ---
 
@@ -13,9 +15,12 @@ const pageTitle = "Home Page";
   </head>
 
   <body>
-    <a href="/">Home</a>
-    <a href="/about/">About Me</a>
-    <a href="/blog/">Blog</a>
+    <Header />
     <h1>hallow! :3</h1>
+    <Footer />
+
+    <script>
+      import "../scripts/menu.js";
+    </script>
   </body>
 </html>
